# Peliprojekti-2013

./: .gitignore  Koulupeliprojekti.sln  README.md
Koulupeliprojekti/: CMakeLists.txt  Koulupeliprojekti.vcxproj  Koulupeliprojekti.vcxproj.filters  Makefile  main.cpp  readme.txt
Koulupeliprojekti/data/scripts/: BlinkScript.txt  BulletScript.txt  DamageColliderScript.txt  EndLevelOnCollisionScript.txt  HealColliderScript.txt  InvulnerabilityOnHit.txt  InvulnerabilityOnHitScript.txt  QuitGameOnDeathScript.txt  SpawnHealthPickupOnDeathScript.txt  SpendTonsOfMemory.txt  WasteMemory.txt
Koulupeliprojekti/docs/: notes.odt  uml.vsdx
Koulupeliprojekti/include/: Game.h
Koulupeliprojekti/include/Collision/: CollisionChecker.h
Koulupeliprojekti/include/Component/: AiComponent.h  CollisionComponent.h  Component.h  FactionComponent.h  FlyingAiComponent.h  FollowingAiComponent.h  GraphicsComponent.h  HealthComponent.h  InputComponent.h  LocationComponent.h  PhysicsComponent.h  SoundComponent.h  VelocityComponent.h  WalkingAiComponent.h
Koulupeliprojekti/include/Component/Scripts/: BlinkScript.h  BulletScriptComponent.h  DamageColliderScript.h  EndLevelScriptComponent.h  QuitGameOnDeathScript.h  SpawnHealthPickupOnDeathScript.h  TempInvulnerabilityScript.h
Koulupeliprojekti/include/Entity/: Entity.h  EntityFactory.h  EntityParent.h
Koulupeliprojekti/include/Graphics/: FontManager.h  Renderer.h  Sprite.h  SpriteLoader.h  SpriteManager.h  SpriteSheetLoader.h  SurfaceOperations.h  TextureFactory.h
Koulupeliprojekti/include/Graphics/Camera/: Camera.h  EntityTrackingCamera.h
Koulupeliprojekti/include/Level/: Level.h  LevelGenerator.h  LevelManager.h
Koulupeliprojekti/include/Message/: AddHealthMessage.h  AnimationChangeMessage.h  CollisionMessage.h  CreateNewTiledSpriteMessage.h  FiringDirectionMessage.h  GenericMessageWithNoData.h  LocationChangeMessage.h  Message.h  MessageFactory.h  MessageProcessor.h  NewTiledSpriteMessage.h  PlaySoundEffectMessage.h  QueryCanIJumpMessage.h  QueryFactionMessage.h  QueryLocationMessage.h  ResetEntityPositionMessage.h  ScriptMessageInterface.h  SetGraphicsVisibilityMessage.h  SetLocationMessage.h  SetVelocityMessage.h  SpawnEntityMessage.h  StartBlinkingMessage.h  TerminateEntityMessage.h  VelocityChangeMessage.h
Koulupeliprojekti/include/Message/Commands/: Command.h  ControlCommand.h  KeyboardCommand.h  MouseCommand.h
Koulupeliprojekti/include/Physics/: PhysicsHandler.h
Koulupeliprojekti/include/Sound/: SoundEffectDefs.h  SoundEffects.h  SoundManager.h
Koulupeliprojekti/include/UI/: Hud.h  InputManager.h
Koulupeliprojekti/include/UI/Commands/: Command.h
Koulupeliprojekti/include/UI/Controller/: Controller.h  JoystickController.h  KeyboardController.h  MouseController.h
Koulupeliprojekti/include/UI/Window/: Button.h  ButtonHandler.h  TextBox.h  TextElement.h  TextField.h  Window.h  WindowBase.h  WindowManager.h
Koulupeliprojekti/include/Utility/: DirectionEnum.h  FactionEnum.h  GenericDefines.h  Logger.h  LoggerManager.h  Logs.h  StringUtility.h  Tick.h
Koulupeliprojekti/include/VM/: ByteCode.h  MemoryManager.h  ScriptLoader.h  VM.h  VMClass.h  VMFrame.h  VMFunction.h  VMObject.h  VMOperations.h  VMState.h  VMValue.h
Koulupeliprojekti/include/VM/FFI/: ConversionFunctions.h  FunctionArgumentTupleTemplates.h  NativeBinding.h  NativeBindingTypedef.h  VariadicFunctionCallTemplates.h
Koulupeliprojekti/include/VM/Memory/: CheneyCollector.h  MemoryManager.h  VMObjectFunctions.h
Koulupeliprojekti/include/VM/ScriptLoader/: ScriptLoader.h  Tokens.h
Koulupeliprojekti/logs/: temp.txt
Koulupeliprojekti/src/: Game.cpp  Game.h
Koulupeliprojekti/src/Collision/: CollisionChecker.cpp  CollisionChecker.h
Koulupeliprojekti/src/Component/: AiComponent.cpp  CollisionComponent.cpp  CollisionComponent.h  Component.cpp  Component.h  FactionComponent.cpp  FactionComponent.h  FlyingAiComponent.cpp  FollowingAiComponent.cpp  FollowingAiComponent.h  GraphicsComponent.cpp  GraphicsComponent.h  HealthComponent.cpp  HealthComponent.h  InputComponent.cpp  InputComponent.h  LocationComponent.cpp  LocationComponent.h  PhysicsComponent.cpp  PhysicsComponent.h  SoundComponent.cpp  SoundComponent.h  VelocityComponent.cpp  VelocityComponent.h  WalkingAiComponent.cpp
Koulupeliprojekti/src/Component/Scripts/: BlinkScript.cpp  BulletScriptComponent.cpp  BulletScriptComponent.h  DamageColliderScript.cpp  DamageColliderScript.h  EndLevelScriptComponent.cpp  HealthPickupScript.cpp  (+6 more)
Koulupeliprojekti/src/Entity/: Entity.cpp  Entity.h  EntityFactory.cpp
Koulupeliprojekti/src/Graphics/: FontManager.cpp  FontManager.h  Renderer.cpp  Renderer.h  Sprite.cpp  Sprite.h  SpriteLoader.cpp  SpriteLoader.h  SpriteManager.cpp  SpriteManager.h  SpriteSheetLoader.cpp  SpriteSheetLoader.h  SurfaceOperations.cpp  SurfaceOperations.h  TextureFactory.cpp  TextureFactory.h
Koulupeliprojekti/src/Level/: Level.cpp  Level.h  LevelGenerator.cpp  LevelGenerator.h  LevelManager.cpp  LevelManager.h
Koulupeliprojekti/src/Message/: AnimationChangeMessage.h  CollisionMessage.h  FiringDirectionMessage.h  LocationChangeMessage.h  Message.cpp  Message.h  MessageFactory.cpp  MessageFactory.h  MessageProcessor.cpp  MessageProcessor.h  NewTiledSpriteMessage.h  ResetEntityPositionMessage.h  ScriptMessageInterface.cpp  ScriptMessageInterface.h  SetLocationMessage.h  SetVelocityMessage.h  SoundManagerPlaySoundMessage.h  SpawnEntityMessage.h  StartBlinkingMessage.h  TakeDamageMessage.h  VelocityChangeMessage.h
Koulupeliprojekti/src/Physics/: PhysicsHandler.cpp  PhysicsHandler.h
Koulupeliprojekti/src/Sound/: Music.cpp  Music.h  SoundEffects.cpp  SoundEffects.h  SoundManager.cpp  SoundManager.h
Koulupeliprojekti/src/UI/: Hud.cpp  Hud.h  InputManager.cpp
Koulupeliprojekti/src/Utility/: GenericDefines.h  Logger.cpp  LoggerManager.cpp  StringUtility.cpp  Tick.cpp  Tick.h
Koulupeliprojekti/src/VM/: ByteCode.cpp  MemoryManager.cpp  RootSetProvider.cpp  ScriptLoader.cpp  VM.cpp  VMClass.cpp  VMFrame.cpp  VMFunction.cpp  VMObject.cpp  VMOperations.cpp  VMState.cpp  VMValue.cpp
(+42 files in other folders)
